...
          child: Image.asset(
            'assets/default_icon.jpg',
          ),
        ),
        Text('Username', style: Theme.of(context).textTheme.bodyLarge),
        Text('2137 pkt', style: Theme.of(context).textTheme.bodySmall),
        ProfileButton(pressFunction: () {}, buttonText: 'Informacje o koncie'),
        ProfileButton(
          pressFunction: () {
            context.router.push(const FriendsRoute());
          },
          buttonText: 'Lista znajomych',
        ),
        ProfileButton(pressFunction: () {}, buttonText: 'Dodane ślady'),
        ProfileButton(pressFunction: () {}, buttonText: 'Ustawienia konta'),
        ProfileButton(pressFunction: () {}, buttonText: 'Ustawienia aplikacji'),
        TextButton(
          child: Text('Wyloguj się', style: Theme.of(context).textTheme.labelMedium),
          onPressed: () {},
        ),
      ],
...
