...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(
          widget.accountData == AccountData.username
              ? 'Zmiana nazwy użytkownika'
              : widget.accountData == AccountData.email
                  ? 'Zmiana adresu email'
                  : 'Zmiana hasła',
        ),
      ),
      body: StreamBuilder<User>(
...
